--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                   <span class="iconify-inline social-icons" data-icon="bi:facebook"></span>
                 </a>
               </div>
+
               <div class="div-hide">
                 <a href="mailto:jrydev404@gmail.com" target="_blank" norefferer="true"
                   class="fullpage__scoial-icon three">
@@ -118,15 +119,15 @@
   </div>
 
   <!--!  Loader  -->
-  <div class="preloader">
+  <!-- <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
       data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca6c9402eb59d_data.json"
       data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="4.6"
       data-duration="0" data-ix2-initial-state="0"></div>
-  </div>
+  </div> -->
 
-  
+
   <div style="opacity: 0" class="parent">
     <nav data-w-id="e2d619f0-3929-f548-7fec-fabd0163f174" class="navbar">
       <div class="container is--nav">
@@ -229,7 +230,7 @@
 
         <div class="project-scroll">
           <div class="project-scroll-image">
-            <img src="assets/code1.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+            <img src="assets/code3.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
               alt="Kitchen an elegant one" class="project__img" />
           </div>
 
@@ -239,7 +240,7 @@
           </div>
 
           <div class="project-scroll-image">
-            <img src="assets/code3.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
+            <img src="assets/code1.jpg" loading="lazy" sizes="(max-width: 767px) 376px, (max-width: 991px) 392px, 46vw"
               alt="Luxury bathroom with black marble floor and white marble wall" class="project__img" />
           </div>
         </div>
@@ -258,19 +259,27 @@
         <div class="footer">
           <div class="footer-left">
             <div class="footer-col">
-              <h2 class="footer-heading">Reach me</h2>
+              <h2 class="footer-heading">THANK YOU FOR VISITING! :)</h2>
               <div class="footer-list">
-                <a href="#" class="footer__link-item mb">lore8
-                  Lorem ipsum dolor sit amet.<br />
+                <a href="#" class="footer__link-item mb">
+                  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2rem" height="2rem"
+                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
+                    <path fill="currentColor"
+                      d="M3 2a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V2zm6 11a1 1 0 1 0-2 0a1 1 0 0 0 2 0z" />
+                  </svg>
+                  : +639-xxx-xxx-xxx
                 </a>
-
-                <a href="#" class="footer__link-item mb">BRANCH OFFICE: 4th floor, RNC Bldg, 2671 Hounduras Street,
-                  <br />
-                  Brgy. San Isidro, makati City<br />
-                </a>
-
                 <a class="footer__link-item mb">
-                  EMAIL: sk.aerobuildersinc.adm@gmail.com
+                  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2rem" height="2rem"
+                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 36 36">
+                    <path fill="currentColor" d="M32.33 6a2 2 0 0 0-.41 0h-28a2 2 0 0 0-.53.08l14.45 14.39Z"
+                      class="clr-i-solid clr-i-solid-path-1" />
+                    <path fill="currentColor"
+                      d="m33.81 7.39l-14.56 14.5a2 2 0 0 1-2.82 0L2 7.5a2 2 0 0 0-.07.5v20a2 2 0 0 0 2 2h28a2 2 0 0 0 2-2V8a2 2 0 0 0-.12-.61ZM5.3 28H3.91v-1.43l7.27-7.21l1.41 1.41Zm26.61 0h-1.4l-7.29-7.23l1.41-1.41l7.27 7.21Z"
+                      class="clr-i-solid clr-i-solid-path-2" />
+                    <path fill="none" d="M0 0h36v36H0z" />
+                  </svg>
+                  : jrydev404@gmail.com
                 </a>
               </div>
             </div>
@@ -278,46 +287,43 @@
 
           <div class="footer-right">
             <div class="div-block-12">
-              <h2 class="footer-heading">Subscribe to our Newsletter</h2>
-
-
+              <h2 class="footer-heading">Socials</h2>
               <div class="footer-form-wrapper">
-                <p class="footer__newsletter-p">
-                  Subscribe to our mailing list to keep up to date on the
-                  latest newsletters and videos.
-                </p>
-                <div class="newsletter w-form">
-                  <form id="email-form" name="email-form" data-name="Email Form" method="get" class="newsletter-form">
-                    <input type="email" class="newsletter__text-field w-input" maxlength="256" name="Newsletter-Email-2"
-                      data-name="Newsletter Email 2" placeholder="Email Address" id="Newsletter-Email-2" required="" />
-                    <div class="newsletter-btn-wrapper">
-                      <div class="newsletter__btn-arrow w-embed">
-                        <svg width="100%" height="" viewBox="0 0 55 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M53.0007 21.4525L40.1463 10.905M53.0007 21.4525L40.1463 32M53.0007 21.4525H1.80078V0"
-                            stroke="currentColor" stroke-width="2" />
-                        </svg>
-                      </div>
-                      <input type="submit" value="" data-wait="Please wait..."
-                        class="newsletter__submit-btn w-button" />
-                    </div>
-                  </form>
-                  <div class="w-form-done">
-                    <div>Thank you! Your submission has been received!</div>
-                  </div>
-                  <div class="w-form-fail">
-                    <div>Oops! Something went wrong please try again.</div>
-                  </div>
-                </div>
+                <a href="https://github.com/Drakkarrr" target="_blank" rel="noopener noreferrer">
+                  <svg viewBox="0 0 128 128" class="social-icons">
+                    <g fill="#ffffff">
+                      <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z">
+                      </path>
+                      <path
+                        d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0">
+                      </path>
+                    </g>
+                  </svg>
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=100010980994040" target="_blank" rel="noopener noreferrer">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="social-icons" aria-hidden="true" role="img"
+                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16">
+                    <path fill="currentColor"
+                      d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131c.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+                  </svg>
+                </a>
+                <a href="#" target="_blank" rel="noopener noreferrer">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="social-icons" aria-hidden="true" role="img"
+                    preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20">
+                    <path fill="currentColor"
+                      d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4zM7.65 13.979H5.706V7.723H7.65v6.256zm-.984-7.024c-.614 0-1.011-.435-1.011-.973c0-.549.409-.971 1.036-.971s1.011.422 1.023.971c0 .538-.396.973-1.048.973zm8.084 7.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537 0-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01 1.932-1.01c1.279 0 2.238.857 2.238 2.699v3.699z" />
+                  </svg>
+                </a>
               </div>
-
-
             </div>
           </div>
         </div>
+
         <div class="footer-bottom">
           <div class="div-block-11">
             <div class="footer-bottom__left">
-              &#64;Sk-aero-builders.inc &copy; 2022
+              Made with ♥ by Junrey Lañas &copy; 2022
             </div>
           </div>
         </div>
