--- a/skills.html
+++ b/skills.html
@@ -20,14 +20,6 @@
   <link rel="stylesheet" href="styles/index/primary.css" type="text/css" />
   <link rel="stylesheet" href="styles/index/secondary.css" type="text/css" />
   <link rel="stylesheet" href="styles/index/media.css" type="text/css" />
-
-  <style>
-    .next {
-      /* color: white; */
-      /* background-color: gray; */
-      fill: white;
-    }
-  </style>
 </head>
 
 <body>
@@ -166,7 +158,7 @@
               <div class="timeline_image-wrapper">
                 <div class="timeline__icon w-embed">
 
-                  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
+                  <svg class="skill-icons" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 15 15">
                     <path fill="none" stroke="currentColor"
                       d="M12.5 8v-.167c0-.736-.597-1.333-1.333-1.333H10a1.5 1.5 0 1 0 0 3h1a1.5 1.5 0 0 1 0 3h-1A1.5 1.5 0 0 1 8.5 11M8 6.5H3m2.5 0V13M.5.5h14v14H.5V.5Z" />
@@ -189,7 +181,7 @@
                 will efficiently update and render just the right components when your data changes.<br /></p>
               <div class="timeline_image-wrapper">
                 <div class="timeline__icon w-embed">
-                  <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
+                  <svg class="skill-icons" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em"
                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                     <path fill="currentColor"
                       d="M14.448 16.24a21.877 21.877 0 0 1-1.747 2.175c1.672 1.623 3.228 2.383 4.09 1.884c.864-.498.983-2.225.414-4.484c-.853.19-1.78.334-2.757.425zm-1.31.087a27.512 27.512 0 0 1-2.276 0c.377.492.758.948 1.138 1.364c.38-.416.76-.872 1.138-1.364zm5.04-7.894c2.665.764 4.405 2.034 4.405 3.567c0 1.533-1.74 2.803-4.405 3.567c.67 2.69.441 4.832-.886 5.598c-1.328.767-3.298-.105-5.292-2.03c-1.994 1.925-3.964 2.797-5.292 2.03c-1.327-.766-1.557-2.908-.886-5.598c-2.665-.764-4.405-2.034-4.405-3.567c0-1.533 1.74-2.803 4.405-3.567c-.67-2.69-.441-4.832.886-5.598c1.328-.767 3.298.105 5.292 2.03c1.994-1.925 3.964-2.797 5.292-2.03c1.327.766 1.557 2.908.886 5.598zm-.973-.248c.57-2.26.45-3.986-.413-4.484c-.863-.499-2.419.261-4.09 1.884a22.049 22.049 0 0 1 1.746 2.175c.978.09 1.904.234 2.757.425zm-10.41 7.63c-.57 2.26-.45 3.986.413 4.484c.863.499 2.419-.261 4.09-1.884a21.877 21.877 0 0 1-1.746-2.175a21.877 21.877 0 0 1-2.757-.425zm4.067-8.142a27.512 27.512 0 0 1 2.276 0A20.523 20.523 0 0 0 12 6.31c-.38.416-.76.872-1.138 1.364zm-1.31.087A21.877 21.877 0 0 1 11.3 5.585C9.627 3.962 8.07 3.202 7.209 3.701c-.864.498-.983 2.225-.414 4.484c.853-.19 1.78-.334 2.757-.425zm4.342 7.52A25.368 25.368 0 0 0 15.787 12a25.368 25.368 0 0 0-1.893-3.28a25.368 25.368 0 0 0-3.788 0A25.368 25.368 0 0 0 8.213 12a25.368 25.368 0 0 0 1.893 3.28a25.368 25.368 0 0 0 3.788 0zm1.284-.131c.615-.08 1.2-.183 1.75-.304a20.523 20.523 0 0 0-.612-1.667a27.512 27.512 0 0 1-1.138 1.97zM8.822 8.85c-.615.08-1.2.183-1.75.304c.17.536.374 1.094.612 1.667a27.512 27.512 0 0 1 1.138-1.97zm-1.75 5.994c.55.121 1.135.223 1.75.304a27.512 27.512 0 0 1-1.138-1.97a20.42 20.42 0 0 0-.612 1.666zm-.978-.245c.261-.834.6-1.708 1.01-2.6a22.002 22.002 0 0 1-1.01-2.6c-2.242.637-3.677 1.604-3.677 2.6s1.435 1.963 3.677 2.6zm10.834-5.445a20.808 20.808 0 0 0-1.75-.304a27.511 27.511 0 0 1 1.138 1.97c.238-.572.442-1.13.612-1.666zm.978.245c-.261.834-.6 1.708-1.01 2.6c.41.892.749 1.766 1.01 2.6c2.242-.637 3.677-1.604 3.677-2.6s-1.435-1.963-3.677-2.6zM12 13.88a1.88 1.88 0 1 1 0-3.76a1.88 1.88 0 0 1 0 3.76z" />
@@ -210,7 +202,7 @@
               <div class="timeline_text">Next.js is an open-source web development framework built on top of Node.js enabling React-based web applications functionalities such as server-side rendering and generating static websites.<br /></div>
               <div class="timeline_image-wrapper">
                 <div class="timeline__icon w-embed">
-                  <svg class="next" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img"  color="#ffffff" width="1.66em" height="1em"
+                  <svg class="skill-icons" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img"  color="#ffffff" width="1.66em" height="1em"
                     preserveAspectRatio="xMidYMid meet" viewBox="0 0 512 309">
                     <path
                       d="M120.81 80.561h96.568v7.676h-87.716v57.767h82.486v7.675h-82.486v63.423h88.722v7.675H120.81V80.561Zm105.22 0h10.26l45.467 63.423L328.23 80.56L391.441 0l-103.85 150.65l53.515 74.127h-10.663l-48.686-67.462l-48.888 67.462h-10.461l53.917-74.128l-50.296-70.088Zm118.898 7.676V80.56h110.048v7.676h-50.699v136.54h-8.852V88.237h-50.497ZM0 80.56h11.065l152.58 228.323l-63.053-84.107L9.254 91.468l-.402 133.31H0V80.56Zm454.084 134.224c-1.809 0-3.165-1.4-3.165-3.212c0-1.81 1.356-3.212 3.165-3.212c1.83 0 3.165 1.401 3.165 3.212c0 1.811-1.335 3.212-3.165 3.212Zm8.698-8.45h4.737c.064 2.565 1.937 4.29 4.693 4.29c3.079 0 4.823-1.854 4.823-5.325v-21.99h4.823v22.011c0 6.252-3.617 9.853-9.603 9.853c-5.62 0-9.473-3.493-9.473-8.84Zm25.384-.28h4.78c.409 2.953 3.294 4.828 7.45 4.828c3.875 0 6.717-2.005 6.717-4.764c0-2.371-1.809-3.794-5.921-4.764l-4.005-.97c-5.62-1.316-8.181-4.032-8.181-8.602c0-5.54 4.521-9.227 11.303-9.227c6.308 0 10.916 3.686 11.196 8.925h-4.694c-.452-2.867-2.95-4.657-6.567-4.657c-3.81 0-6.35 1.833-6.35 4.635c0 2.22 1.635 3.493 5.683 4.441l3.423.841c6.373 1.488 9 4.075 9 8.753c0 5.95-4.607 9.68-11.97 9.68c-6.89 0-11.52-3.558-11.864-9.12Z" />
@@ -229,7 +221,8 @@
             <div class="timeline_right">
               <div class="timeline_text">Tailwind is a utility-first CSS framework for rapidly building custom designs. It can be used alone to style React Apps. However, it can be better combined with Styled Components. That combination brings the magic of Tailwind into CSS-in-JS.<br /></div>
               <div class="timeline_image-wrapper">
-                <div class="timeline__icon w-embed"><svg width="219" height="174" viewBox="0 0 219 174" fill="none"
+                <div class="timeline__icon w-embed">
+                  <svg class="skill-icons" width="219" height="174" viewBox="0 0 219 174" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g opacity="0.05">
                       <path opacity="0.05" d="M59.3209 89.8799H0.380859V173.83H91.4709V118.46H59.3209V89.8799Z"
@@ -243,7 +236,8 @@
                       <path opacity="0.7" d="M59.3203 0.649902V89.8799H91.4703V118.46H218.21V0.649902H59.3203Z"
                         stroke="white" stroke-width="0.25" stroke-miterlimit="10" />
                     </g>
-                  </svg></div>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
@@ -257,7 +251,8 @@
             <div class="timeline_right">
               <p class="timeline_text">Node. js is a platform for building the i/o applications which are server-side event-driven and made using JavaScript. Express. js is a framework based on Node. js for which is used for building web-application using approaches and principles of Node.<br /></p>
               <div class="timeline_image-wrapper">
-                <div class="timeline__icon w-embed"><svg width="156" height="156" viewBox="0 0 156 156" fill="none"
+                <div class="timeline__icon w-embed">
+                  <svg class="skill-icons" width="156" height="156" viewBox="0 0 156 156" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path opacity="0.05"
                       d="M136.441 37.5801L133.861 45.0301L122.041 79.2001L99.6907 56.8501L77.3407 34.5001L111.511 22.6801L118.961 20.1001C89.7607 -0.759944 48.9306 1.90007 22.7206 28.1101C-6.46938 57.3001 -6.46938 104.63 22.7206 133.82C51.9106 163.01 99.2406 163.01 128.431 133.82C154.641 107.6 157.301 66.7801 136.441 37.5801Z"
@@ -277,7 +272,8 @@
                     <path opacity="0.7"
                       d="M126.221 11.13L131.021 15.92L145.681 10.85L140.611 25.52L145.411 30.31L155.551 0.97998L126.221 11.13Z"
                       stroke="white" stroke-width="0.25" stroke-miterlimit="10" />
-                  </svg></div>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
@@ -291,7 +287,8 @@
             <div class="timeline_right">
               <p class="timeline_text">GraphQL is an open-source data query and manipulation language for APIs, and a runtime for fulfilling queries with existing data. GraphQL was developed internally by Facebook in 2012 before being publicly released in 2015.<br />‍<br />Apollo tracks your GraphQL schemas in a registry to create a central source of truth for everything in your supergraph. Studio allows developers to explore data, collaborate on queries, observe usage, and deliver schema changes with agility and confidence.<br /></p>
               <div class="timeline_image-wrapper">
-                <div class="timeline__icon w-embed"><svg width="156" height="156" viewBox="0 0 156 156" fill="none"
+                <div class="timeline__icon w-embed">
+                  <svg class="skill-icons" width="156" height="156" viewBox="0 0 156 156" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M22.1406 133.82L63.6206 92.3398" stroke="white" stroke-width="0.25"
                       stroke-miterlimit="10" />
@@ -308,7 +305,8 @@
                       fill="white" stroke="white" stroke-width="0.25" stroke-miterlimit="10" />
                     <path opacity="0.7" d="M76.7598 34.4901L145.11 10.8501L121.47 79.2001L76.7598 34.4901Z"
                       stroke="white" stroke-width="0.25" stroke-miterlimit="10" />
-                  </svg></div>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
@@ -322,7 +320,8 @@
             <div class="timeline_right">
               <div class="timeline_text">PostgreSQL have to do with their systems, architecture, and syntax. MongoDB is a document database while Postgres is a relational database management system; MongoDB has a distributed architecture while PostgreSQL has a monolithic architecture; and Postgres uses SQL, while MongoDB uses BSON.<br /></div>
               <div class="timeline_image-wrapper">
-                <div class="timeline__icon w-embed"><svg width="184" height="145" viewBox="0 0 184 145" fill="none"
+                <div class="timeline__icon w-embed">
+                  <svg class="skill-icons" width="184" height="145" viewBox="0 0 184 145" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M101.02 19.9697C101.02 26.1397 171.51 33.7698 181.41 42.3998V10.2598C169.23 10.7698 101.02 13.9197 101.02 19.9697Z"
