--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!-- This site was created in Webflow. http://www.webflow.com -->
-<!-- Last Published: Fri Apr 15 2022 13:23:49 GMT+0000 (Coordinated Universal Time) -->
+<!DOCTYPE html>
 <html data-wf-domain="www.apextransformations.ca" data-wf-page="61fb6d3ce15a91dfbbf284dd"
   data-wf-site="61ec1a21c49ca64c3e2eb550">
 
