--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta property="og:type" content="website" />
 
-  <title>IamJurey</title>
+  <title>JryDev</title>
 
   <!--!  Description  -->
   <meta content="www.jrydev.codes" property="og:title" />
