--- a/skills.html
+++ b/skills.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8" />
   <meta property="og:type" content="website" />
 
-  <title>Skills - IamJunrey</title>
+  <title>Skills - JryDev</title>
   <!--!  Description  -->
   <meta content="Skills - jrydev.codes" property="og:title" />
   <meta content="Wazzup mananap yow yow break it down yow!" name="description" property="og:description" />
@@ -375,6 +375,7 @@
           <div class="footer-right">
             <div class="div-block-12">
               <h2 class="footer-heading">Socials</h2>
+              
               <div class="footer-form-wrapper">
                 <a href="https://github.com/Drakkarrr" target="_blank" rel="noopener noreferrer">
                   <svg viewBox="0 0 128 128" class="social-icons">
@@ -419,13 +420,14 @@
     </footer>
   </div>
 
-  <!-- <div class="preloader">
+  <div class="preloader">
     <div data-is-ix2-target="1" class="preloader__lottie" data-w-id="ce02b5f7-6587-ae39-a94b-65ea33dbb07c"
       data-animation-type="lottie"
       data-src="https://uploads-ssl.webflow.com/61ec1a21c49ca64c3e2eb550/61ec1a21c49ca6c9402eb59d_data.json"
       data-loop="0" data-direction="1" data-autoplay="0" data-renderer="svg" data-default-duration="4.6"
       data-duration="0" data-ix2-initial-state="0"></div>
-  </div> -->
+  </div>
+
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <script src="scripts/index.js"></script>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=61ec1a21c49ca64c3e2eb550"
